feat: aded hotel_booking.sql schema fille, some route documentations and minor code updates
